refactor(kitchenpos): Product 도메인 값 객체 분리 및 영향 받는 코드 수정 포함